<resources>
    <string name="app_name">PH-Beygdu</string>
    <string name="action_settings">Settings</string>


    <!-- RootActivity String constants -->
    <string name="search_toolbar_title">PH-Toolbar_Title</string>
    <string name="toolbar_header_description">PH-Toolbar-Header</string>

    <!-- SearchFragment String constants -->
    <string name="search_header">PH-Header</string>
    <string name="search_edittext_hint">PH-EditText_Hint</string>
    <string name="allowed_characters">aábdðeéfghiíjklmnoóprstuúvxyýþæöAÁBDÐEÉFGHIÍJKLMNOÓPRSTUÚVXYÝÞÆÖwWzZcC</string>
    <string name="search_button_description">PH-Button_Description</string>
    <string name="search_checkbox_description">PH-CheckBox_Description</string>
    <string name="search_BinBanner_description">PH-BinBanner</string>
    <string name="search_SkrambiBanner_description">PH-SkrambiBanner</string>
    <string name="search_footer_description">PH-Footer_Description</string>
    <string name="search_footer_contactbutton">PH-ContactButton</string>
    <string name="search_footer_mapbutton">PH-MapButton</string>

    <!-- CacheFragment String constants -->
    <string name="cache_empty_fragment">PH-No past searches</string>
    <string name="cache_imageview_description">WordCategoryImage</string>
    <string name="cache_footer_description">PH-Footer_Description</string>

    <!-- MailFragment String constants -->
    <string name="mail_toBin">XXXX@XXXX.XX</string>
    <string name="mail_toDev">DDDD@DDDD.DD</string>
    <string-array name="mail_mailto">
        <item>@string/mail_toBin</item>
        <item>@string/mail_toDev</item>
    </string-array>
    <string name="mail_subject_hint">Subject</string>
    <string name="mail_context_hint">Context</string>
    <string name="mail_footer_description">PH-footer-desc</string>
    <string name="mail_invalid_subject">Please type in a subject</string>
    <string name="mail_invalid_subject_content">Please type in a subject and content</string>
    <string name="mail_invalid_content">Please type in the content</string>
    <string name="mail_email_client">Choose email client</string>

    <!-- MapFragment String constants -->

    <!-- ResultFragment String constants -->

    <!-- Navigator Drawer Descriptions  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigator Drawer Items  -->
    <string name="drawer_search">Search</string>
    <string name="drawer_about">About Bin</string>
    <string name="drawer_last_searches">Last Searches</string>
    <string name="drawer_contact">Contact</string>

    <!-- CustomDialog String constants -->
    <string name="skrambi_title_prefix">The word</string>
    <string name="skrambi_title_postfix">is incorrectly spelled, did you mean:</string>
    <string name="multihit_title">More than one result was found for the word </string>
    <string name="customdialog_cancel">Cancel</string>

    <!-- NotificationDialog String constants -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RootActivity String constants -->
    <string name="whitespace"> </string>

    <!-- SearchFragment String constants -->


    <string name="copyright">© 2015 Stofnun Árna Magnússonar \n í íslenskum fræðum</string>




    <!-- AboutFragment String constants -->
    <string name="about_placeholder">PH-AboutFragment</string>

    <!-- CacheFragment String constants -->
    <string name="cache_placeholder">PH-CacheFragment</string>

    <!-- AuthorFragment String constants -->
    <string name="author_placeholder">PH-AuthorFragment</string>

    <!-- ContactFragment String constants -->
    <string name="contact_placeholder">PH-ContactFragment</string>
    <string name="contact_okButton">Send</string>
    <string name="contact_cancelButton">Cancel</string>

    <!-- CustomDialog String constants -->
    <string name="multiHitPrefix">PH-Ordid </string>
    <string name="multiHitPostFix">fannst ekki. Gaetir thu att vid :</string>

    <!-- NotificationDialog String constants -->
    <string name="error">PH-Error!</string>
    <string name="notification">PH-Alert!</string>
    <string name="cancel">PH-Cancel</string>

</resources>
