<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="is.example.aj.beygdu.Fragments.MailFragment">

    <RelativeLayout
        android:id="@+id/spinner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <Spinner
            android:id="@+id/mail_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/mail_subject"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/inputborder"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:hint="@string/mail_subject_hint"
        android:layout_below="@+id/spinner_container"/>
    <EditText
        android:id="@+id/mail_content"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/inputborder"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/mail_subject"
        android:hint="@string/mail_context_hint"
        android:gravity="top|start"/>

    <RelativeLayout
        android:id="@+id/mail_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer">

        <Button
            android:id="@+id/mail_cancelButton"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/greybutton"
            android:text="@string/contact_cancelButton"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/mail_okButton"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:text="@string/contact_okButton"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:gravity="start" >

        <TextView
            android:id="@+id/search_footer_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/mail_footer_description"
            android:textColor="#FFF"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>
